test/modules/vass/deinit-order-duplicate.chpl

proc deinit() { writeln("deinit1"); }
proc deinit() { writeln("deinit2"); }
